@@ -1,10 +1,19 @@
+Mon Aug 21 10:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/UUID.{h,cpp,inl}:
+          Changed node_release_ to a real bool and use ACE_ERROR instead
+          of ACE_DEBUG for a real error message
+
+        * ace/OS_NS_unistd.cpp:
+          Const improvement
+
 Sat Aug 19 22:03:03 UTC 2006  Yan Dai  <dai_y@ociweb.com>
 
         * bin/tao_orb_tests.lst
 
           Excluded the DII collocation oneway test from running in the minimum
           CORBA build.
-          
+
 Fri Aug 18 20:38:35 UTC 2006  Steve Huston  <shuston@riverace.com>
 
         * examples/APG/Logging/Trace.h: Further changed use of __VA_ARGS__
